<resources>
    <string name="app_name">둥지메이트</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="kakao_app_key">ce2aaa0ffffda41e08a7fd9cb08888c3</string>
    <string name="kakao_scheme">kakaoce2aaa0ffffda41e08a7fd9cb08888c3</string>

    <string name="calendar_format">yyyy. MM</string>
    <string-array name="todo_spinner_ampm">
        <item>오전</item>
        <item>오후</item>
    </string-array>
    <string-array name="todo_spinner_hour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="todo_spinner_minute">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>

    <!-- MemoAddDialog -->
    <string name="memo_dialog_title">메모 붙이기</string>
    <string name="memo_dialog_content_title">내용</string>
    <string name="memo_dialog_content_hint">내용을 입력해 주세요.</string>
    <string name="memo_dialog_color_title">색상</string>
    <string name="memo_dialog_cancel">취소</string>
    <string name="memo_dialog_confirm">확인</string>

    <!-- MemoDeleteDialog -->
    <string name="memo_delete_dialog_btn_txt">삭제하기</string>

    <!-- Register Toolbar -->
    <string name="register_toolbar_title">회원가입</string>
    <string name="register_two_name">닉네임은 두글자로 설정해주세요.</string>

    <!-- RegisterOneDialog   -->
    <string name="register_one_phone_success">사용 가능한 번호입니다.</string>
    <string name="register_one_phone_failure">이미 사용중인 번호입니다</string>
    <string name="register_one_email_success">사용 가능한 이메일입니다.</string>
    <string name="register_one_email_failure">이미 사용중인 이메일입니다.</string>

    <!-- RegisterLoginDialog   -->
    <string name="register_login_btn_text">로그인</string>

</resources>